--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.0",
+    "nunjucks-date-filter": "^0.1.1",
     "pg": "^7.12.1",
     "sequelize": "^5.18.0",
     "session-file-store": "^1.3.1"
